Stuff and things
- Fix underwater model side render
- Add open/close inventory sound
- Annotations
- Cleanup
- Start work on IMachine

--- a/src/main/resources/assets/mvillage/lang/en_us.lang
+++ b/src/main/resources/assets/mvillage/lang/en_us.lang
@@ -1,3 +1,4 @@
 tile.mvillage.test_inventory.name=Test Inventory
 tile.mvillage.cabinet.name=Kitchen Cabinet
 tile.mvillage.oven.name=Oven
+tile.mvillage.connection_test.name=Connection Test
